[tool.poetry]
name = "pymangle"
version = "0.9.2"
description = "\"A python code to read and work with Mangle masks.\""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6"
numpy = ">=1.10.0"


[build-system]
requires = ["poetry-core", "wheel", "setuptools", "numpy", "clang"]
build-backend = "poetry.core.masonry.api"
